--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 kotlin = "2.1.21"
 kotin-ksp = "2.0.21-1.0.27"
-android-gradle = "8.1.4"
+android-gradle = "8.6.1"
 hilt = "2.52"
 androidx-core = "1.16.0"
 androidx-activity = "1.10.1"
@@ -14,7 +14,8 @@ accompanist = "0.34.0"
 coroutines = "1.8.1"
 junit = "4.13.2"
 mockk = "1.13.5"
-androidx-test = "1.6.1"
+androidx-test = "1.2.1"
+androidx-test-core = "1.6.1"
 espresso-core = "3.6.1"
 appcompat = "1.7.1"
 material = "1.12.0"
@@ -36,7 +37,7 @@ kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-androi
 junit = { module = "junit:junit", version.ref = "junit" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 androidx-test-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-test" }
-androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
+androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test-core" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
@@ -45,6 +46,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 android-application = { id = "com.android.application", version.ref = "android-gradle" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+kotlin-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotin-ksp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 android-library = { id = "com.android.library", version.ref = "android-gradle" }
