--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 kotlin = "2.1.21"
 kotin-ksp = "2.1.21-2.0.1"
 android-gradle = "8.6.1"
-hilt = "2.52"
+hilt = "2.57"
 androidx-core = "1.16.0"
 androidx-activity = "1.10.1"
 androidx-compose = "1.3.2"
@@ -21,6 +21,8 @@ appcompat = "1.7.1"
 material = "1.12.0"
 play-core = "1.10.3"
 startup-runtime = "1.2.0"
+timber = "5.0.1"
+googleGmsServices = "4.4.3"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
@@ -45,7 +47,9 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 google-play-core = { group = "com.google.android.play", name = "core", version.ref = "play-core" }
+google-gms-services = { group = "com.google.gms", name = "google-services", version.ref = "googleGmsServices" }
 androidx-startup-runtime = { group = "androidx.startup", name = "startup-runtime", version.ref = "startup-runtime" }
+timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle" }
@@ -56,3 +60,4 @@ kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotin-ksp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 android-library = { id = "com.android.library", version.ref = "android-gradle" }
 android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "android-gradle" }
+google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsServices" }
