--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,9 @@ play-core = "1.10.3"
 startup-runtime = "1.2.0"
 timber = "5.0.1"
 googleGmsServices = "4.4.3"
+datastore = "1.1.7"
+google-protobuf = "3.25.5"
+protobuf-plugin = "0.9.5"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
@@ -50,6 +53,9 @@ google-play-core = { group = "com.google.android.play", name = "core", version.r
 google-gms-services = { group = "com.google.gms", name = "google-services", version.ref = "googleGmsServices" }
 androidx-startup-runtime = { group = "androidx.startup", name = "startup-runtime", version.ref = "startup-runtime" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
+google-protobuf = { group = "com.google.protobuf", name = "protobuf-javalite", version.ref = "google-protobuf" }
+google-protoc = { group = "com.google.protobuf", name = "protoc", version.ref = "google-protobuf" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle" }
@@ -61,3 +67,4 @@ hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 android-library = { id = "com.android.library", version.ref = "android-gradle" }
 android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "android-gradle" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsServices" }
+protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
