--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,26 @@
 [versions]
-kotlin = "2.1.21"
-kotin-ksp = "2.1.21-2.0.1"
+kotlin = "2.2.0"
+kotin-ksp = "2.2.0-2.0.2"
 android-gradle = "8.6.1"
 hilt = "2.57"
 androidx-core = "1.16.0"
-androidx-activity = "1.10.1"
+androidx-activity = "1.10.0"
 androidx-compose = "1.3.2"
-androidx-lifecycle = "2.9.1"
-androidx-hilt = "1.2.0"
-androidx-room = "2.7.2"
+androidx-lifecycle = "2.9.3"
+androidx-hilt = "1.3.0"
+androidx-room = "2.8.0"
 firebase = "25.1.4"
 firebaseBom = "34.2.0"
 accompanist = "0.34.0"
-coroutines = "1.8.1"
+coroutines = "1.10.2"
 junit = "4.13.2"
 mockk = "1.13.5"
-androidx-test = "1.2.1"
-androidx-test-core = "1.6.1"
-espresso-core = "3.6.1"
+androidx-test = "1.3.0"
+androidx-test-core = "1.7.0"
+espresso-core = "3.7.0"
 appcompat = "1.7.1"
-material = "1.12.0"
-play-core = "1.10.3"
+material = "1.13.0"
+play-core-common = "2.1.0"
 startup-runtime = "1.2.0"
 timber = "5.0.1"
 googleGmsServices = "4.4.3"
@@ -52,7 +52,7 @@ androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-te
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-google-play-core = { group = "com.google.android.play", name = "core", version.ref = "play-core" }
+google-play-core = { group = "com.google.android.play", name = "feature-delivery", version.ref = "play-core-common" }
 google-gms-services = { group = "com.google.gms", name = "google-services", version.ref = "googleGmsServices" }
 androidx-startup-runtime = { group = "androidx.startup", name = "startup-runtime", version.ref = "startup-runtime" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
@@ -71,3 +71,4 @@ android-library = { id = "com.android.library", version.ref = "android-gradle" }
 android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "android-gradle" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsServices" }
 protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
+room = { id = "androidx.room", version.ref = "androidx-room" }
