--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ hilt = "2.57"
 androidx-core = "1.16.0"
 androidx-activity = "1.10.0"
 androidx-compose = "1.3.2"
+androidx-compose-navigation = "2.9.4"
 androidx-lifecycle = "2.9.3"
 androidx-hilt = "1.3.0"
 androidx-room = "2.8.0"
@@ -33,6 +34,7 @@ kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-compose" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-compose-navigation" }
 androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 androidx-hilt-navigation = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
