--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,22 @@
 [versions]
 kotlin = "2.2.0"
 kotin-ksp = "2.2.0-2.0.2"
-android-gradle = "8.6.1"
+android-gradle = "8.9.3"
 hilt = "2.57"
-androidx-core = "1.16.0"
-androidx-activity = "1.10.0"
-androidx-compose = "1.3.2"
-androidx-compose-navigation = "2.9.4"
-androidx-lifecycle = "2.9.3"
 androidx-hilt = "1.3.0"
+androidx-core = "1.17.0"
+androidx-activity = "1.11.0"
+androidx-compose = "1.9.1"
+androidx-compose-material3 = "1.3.2"
+androidx-compose-navigation = "2.9.4"
+androidx-lifecycle = "2.9.4"
 androidx-room = "2.8.0"
-firebase = "25.1.4"
-firebaseBom = "34.2.0"
+firebaseBom = "34.3.0"
 accompanist = "0.34.0"
 coroutines = "1.10.2"
 junit = "4.13.2"
 mockk = "1.13.5"
 androidx-test = "1.3.0"
-androidx-test-core = "1.7.0"
 espresso-core = "3.7.0"
 appcompat = "1.7.1"
 material = "1.13.0"
@@ -33,7 +32,7 @@ protobuf-plugin = "0.9.5"
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
-androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-compose" }
+androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-compose-material3" }
 androidx-compose-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "androidx-compose" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "androidx-compose" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-compose-navigation" }
@@ -52,7 +51,6 @@ kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-androi
 junit = { module = "junit:junit", version.ref = "junit" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 androidx-test-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-test" }
-androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test-core" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
