--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ androidx-hilt = "1.3.0"
 androidx-core = "1.17.0"
 androidx-activity = "1.11.0"
 androidx-compose = "1.9.1"
+androidx-material-icon = "1.7.8"
 androidx-compose-material3 = "1.3.2"
 androidx-compose-navigation = "2.9.4"
 androidx-lifecycle = "2.9.4"
@@ -34,6 +35,7 @@ kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-compose-material3" }
+androidx-compose-material-icon = { module = "androidx.compose.material:material-icons-extended", version.ref = "androidx-material-icon" }
 androidx-compose-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "androidx-compose" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "androidx-compose" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-compose-navigation" }
