--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
-kotlin = "2.2.0"
-kotin-ksp = "2.2.0-2.0.2"
-android-gradle = "8.9.3"
-hilt = "2.57"
+kotlin = "2.2.20"
+kotin-ksp = "2.2.20-2.0.4"
+android-gradle-plugin = "8.13.0"
+hilt = "2.57.2"
 androidx-hilt = "1.3.0"
 androidx-core = "1.17.0"
 androidx-activity = "1.11.0"
-androidx-compose = "1.9.1"
+androidx-compose = "1.9.3"
 androidx-material-icon = "1.7.8"
-androidx-compose-material3 = "1.3.2"
-androidx-compose-navigation = "2.9.4"
+androidx-compose-material3 = "1.4.0"
+androidx-compose-navigation = "2.9.5"
 androidx-lifecycle = "2.9.4"
-androidx-room = "2.8.0"
-firebaseBom = "34.3.0"
-accompanist = "0.34.0"
+androidx-room = "2.8.2"
+firebaseBom = "34.4.0"
+accompanist = "0.37.3"
 coroutines = "1.10.2"
 junit = "4.13.2"
-mockk = "1.13.5"
+mockk = "1.14.6"
 androidx-test = "1.3.0"
 espresso-core = "3.7.0"
 appcompat = "1.7.1"
@@ -24,11 +24,11 @@ material = "1.13.0"
 play-core-common = "2.1.0"
 startup-runtime = "1.2.0"
 timber = "5.0.1"
-googleGmsServices = "4.4.3"
+googleGmsServices = "4.4.4"
 datastore = "1.1.7"
-google-protobuf = "3.25.5"
+google-protobuf = "4.32.1"
 protobuf-plugin = "0.9.5"
-kotlin-jvm = "1.9.24"
+kotlin-jvm = "2.2.20"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
@@ -67,14 +67,14 @@ google-protobuf = { group = "com.google.protobuf", name = "protobuf-javalite", v
 google-protoc = { group = "com.google.protobuf", name = "protoc", version.ref = "google-protobuf" }
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "android-gradle" }
+android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotin-ksp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-android-library = { id = "com.android.library", version.ref = "android-gradle" }
-android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "android-gradle" }
+android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
+android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "android-gradle-plugin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsServices" }
 protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
 room = { id = "androidx.room", version.ref = "androidx-room" }
